Added authorisation to worker management module